Fix printing spacing

--- a/resume-print.css
+++ b/resume-print.css
@@ -6,6 +6,7 @@ footer {
 
 header {
   margin-top: 0;
+  padding-top: 0;
 }
 
 header h1 {
